@@ -1,21 +1,23 @@
-= 分散オブジェクトフレームワーク DeepConnect 入門
+= 分散オブジェクト環境 DeepConnect 入門
 
 == DeepConnect とは?
 
-* 分散オブジェクト環境を実現するためのフレームワーク
-* fairyで採用
+DeepConnectは, 分散オブジェクト環境を実現するためのフレームワークであ
+る.
+
+fairyで採用されている.
 
 == DeepConnect って何をしてくれるの?
 
 ネットワーク越し, または、別のプロセス空間上のオブジェクトに対し,
 メッセージを送り, 実行し, その結果を得ることができる機能を提供する.
 
-シンタックスを重視し, Rubyのメッセージ形式をそのまま利用出きる.
+シンタックスを重視し, Rubyのメッセージ形式をそのまま利用できる.
 
 * remote_obj.message(arg1,...)
 * remote_obj.message(arg2, ...){...}
 
-もっと分かりやすく言えば、drb と考え方は似ている.
+もっと分かりやすく言えば、drb と考え方は似ている. 
 
 == 歴史
 
@@ -32,14 +34,16 @@
 * 2010.10.28 rubygems.org に公開
 
 == DeepConnect入門 - イメージ
-== DeepConnect入門 - (1)
+(作業中)
+
+== DeepConnect入門 
 サーバー側(受けて側)は以下のように書く:
 
-  dc = DeepConnect::start(port)
+  dc = DeepConnect::start(port)	  
   # サービス開始
-  dc.export("name", obj)
+  dc.export("name", obj)	  
   # obj を name で参照できるように宣言
-  dc.export("RemoteArray", Array)
+  dc.export("RemoteArray", Array) 
   # クラスでもexportできる
 
 クライアント側(リクエスト出す側)は以下のようになる:
@@ -47,19 +51,24 @@
   dc = DeepConnect::start
   ds = dc.open_deepspace(相手addr, 相手port)
   # 相手(のDeepSpace)と接続
-  remote_obj = deepspace.import("name")
-  # リモートオブジェクト(の参照)を取得。取っ掛かりのオブジェクトはimportする必要がある。 
+
+DeepSpaceは, 接続相手のオブジェクト空間を意味している. 相手側でexport
+したオブジェクトをimportすることができる. 
+
+  remote_obj = ds.import("name")
+  # リモートオブジェクト(の参照)を取得. 取っ掛かりのオブジェクトはimportする必要がある
   RemoteArray = deepspace.import("RemoteArray")
-  # クラスも同様に取得可能
+  # クラス(の参照)も同様に取得可能
 
 あとは、だいたい普通にRubyのプログラムを組めばよい:
 
   ret = remote_obj.req
-  # 戻り値もリモートオブジェクト（の参照）
+  # 戻り値もリモートオブジェクト(の参照)
   remote_ary = RemoteArray.new
-  # サーバー側に配列が作られる。その参照を取得。
-  remote_ary.push “foo”
-  # さらにリモートオブジェクトにメッセージを送れる
+  # サーバー側で配列が作られる。そのオブジェクト(の参照)を取得
+  remote_ary.push "foo"
+  # さらにリモートオブジェクトにメッセージを送ることが可能
+
 
 == 特徴
 
@@ -82,11 +91,11 @@ DeepConnectの特徴は以下にあげられる:
 
 リモートオブジェクトとローカルのオブジェクトを区別なく利用可能になるた
 め, オブジェクトの参照渡しを基本とすることによって, 既存プログラムの分
-散 化が簡単に実現可能になる. 値(コピー)渡しではそのようなことは不可能
+散化が簡単に実現可能になる. 値(コピー)渡しではそのようなことは不可能
 である.
 
 どのオブジェクトをどこに置くかを考えるだけでよくなる. つまり, モデリン
-グにおける論理モデル配置モデルとの分離が可能にある
+グにおける論理モデルと配置モデルとの分離が可能にある
 
 例:  fairyのmapの実装
     def basic_each(&block)
@@ -99,23 +108,23 @@ DeepConnectの特徴は以下にあげられる:
 上記の例の場合, @inputが前段のフィルタになっている。これが、リモートの
 オブジェクトの場合もあるし、ローカルのオブジェクトの可能性もある。
 
-このように、リモート/ローカルのオブジェクトを区別なく使えることにより、
-オブジェクトの分散配置が自由に行えるようになる。これには、クラスを
-exportできるのが有効
+このように、リモート/ローカルのオブジェクトを区別なく扱えるようになる
+ことにより、オブジェクトの分散配置が自由に行えるようになる。これには、
+クラスをexportできるのが有効
 
 == 特徴 - メソッドは参照渡しとはいっても
 
-ただし、以下のものは値(コピー)私になっている
+ただし、以下のものは値(コピー)渡しになっている
 
 * Immutable なもの
 * String 
 
-Stringに関しては, パフォーマンスを考えこういう選択になった.
-文字列の場合、オブジェクトとして扱うよりは値がほしいことが多いので、実
-用上は問題がないことが多い.
+Stringに関しては, パフォーマンスの考慮しこういう選択になった. 文字列の
+場合、オブジェクトとして扱うよりは値がほしいことが多いので、実用上はほ
+ぼ問題がない.
 
-さらに、オブジェクトとしてよりも、その値がほしい場合, パフォーマンスを
-考えると、その他のオブジェクトでも、そういったことがないわけではない.
+さらに, その他のオブジェクトでも, オブジェクトとしてよりも, その値がほ
+しい場合, パフォーマンスを考えると値(コピー)渡しにしたいこともありえる.
 
 また,  組み込みのメソッドの中には参照では困ることが多い.
 
@@ -124,7 +133,7 @@ Stringに関しては, パフォーマンスを考えこういう選択になっ
   remote_ary & ary
 
 このばあい、Array#& の実装はaryをローカルなオブジェクトとして理解し,
-リモートオブジェクトとして扱ってくれない.
+リモートオブジェクトとして扱ってくれない. 
 
 == 特徴 - メソッドスペック
 
@@ -138,13 +147,12 @@ Stringに関しては, パフォーマンスを考えこういう選択になっ
 メソッド引数、戻り値、ブロック引数、ブロック戻り値に指定可能になっている.
 
   def_method_spec(Object, "VAL to_a()")
-  def_method_spec(Array, :method=> :==, :args=> "VAL")
+  def_method_spec(Array, :method => :==, :args => "VAL")
 
 組み込みメソッドに関しては、一通り定義済みになっていて, 前述の Array#& 
-の問題は解消している.
+のような問題は解消している.
 
-クラス単位での指定も出来るが、MethodSpecを使うほうが便利
-
+実際には, クラス単位での指定も出来るが、MethodSpecを使うほうが便利だ.
 
 == 特徴 - Future型
 
@@ -155,8 +163,10 @@ Stringに関しては, パフォーマンスを考えこういう選択になっ
 
     v = DeepConnect::future{remote.req}
     # 処理を継続、vがFutureオブジェクト
-    v.value			# 実際の値の取得
-    v.messege		# Delegatorにもなっている
+    v.value			
+    # 実際の値の取得
+    v.messege		
+    # Delegatorにもなっている
 
 == 特徴 - 分散GC
 
@@ -197,14 +207,15 @@ DeepConnectは、接続先に対してどんなメソッドも呼び出せてし
 る. ただし、すべて宣言しなくてはならないので、かなり面倒
 
 == アーキテクチャ
+(作業中)
 
 == 実績
 
 fairyで採用されている. fairy自身はかなり激しい分散並列処理システムでヘ
 ビーユーザーさまです. おかげさまで DeepConnect の品質が向上しました(^^;;
 
-fairyローカル版から、fairy分散版への修正は、5% ぐらいの修正で動作した.
-その修正も, ほんとんどがオブジェクトのexport/importの指定ぐらい. 
+fairyローカル版から、fairy分散版への修正は、5%ぐらいの修正で動作した.
+その修正も, ほんとんどがオブジェクトのexport/importの指定ぐらい.
 
 
 == 注意事項
